--- a/routecast-frontend/package.json
+++ b/routecast-frontend/package.json
@@ -4,13 +4,17 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@mui/material": "^6.4.0",
+    "@react-google-maps/api": "^2.20.5",
     "animate.css": "^4.1.1",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
+    "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^4.2.4"
